--- a/src/app/service-page/components/service-page-another-services/service-page-another-services.component.html
+++ b/src/app/service-page/components/service-page-another-services/service-page-another-services.component.html
@@ -28,7 +28,7 @@
     </ng-container>
   </div>
   <div class="btn-wrapper" *ngIf="offerData.user.userOfferCount > 4">
-    <a class="btn-watch-more" [routerLink]="['/user', offerData.user_id]">{{'service-page.more-services' | translate}}</a>
+    <a class="btn-watch-more" [routerLink]="['/user', offerData.user_id] | localize">{{'service-page.more-services' | translate}}</a>
   </div>
 </section>
 
