--- a/src/app/service-page/components/service-page-compare-table/service-page-compare-table.component.scss
+++ b/src/app/service-page/components/service-page-compare-table/service-page-compare-table.component.scss
@@ -162,3 +162,11 @@
     }
   }
 }
+@media (max-width: 1024px) {
+  .table {
+    margin-bottom: 60px;
+    &::after {
+      display: none;
+    }
+  }
+}
