--- a/src/app/service-page/components/service-page-packages/service-page-packages.component.html
+++ b/src/app/service-page/components/service-page-packages/service-page-packages.component.html
@@ -74,7 +74,7 @@
 
           </ul>
         </form>
-        <div class="btn-order-service 2" (click)="goCheckout(package); scrollToElement('checkout-top')" >
+        <div class="btn-order-service 2" (click)="goCheckout(package); scrollToElement('page-top')" >
         <!-- <div class="btn-order-service 2" (click)="setState()" > -->
           {{'service-page.order-service' | translate}} <span>(за {{ offerData[package].price }} ₴)</span>
         </div>
@@ -83,7 +83,7 @@
 
   </div>
 
-  <div class="btn-options compare" (click)="scrollToElement('CompareTable')"> 
+  <div class="btn-options compare" (click)="scrollToElement('compare-table')"> 
     <span>{{'service-page.compare-service-packages' | translate}}</span>
   </div>
 </div>
