--- a/src/app/service-page/components/service-page/service-page.component.scss
+++ b/src/app/service-page/components/service-page/service-page.component.scss
@@ -308,6 +308,9 @@
         }
       }
     }
+    &:last-child{
+      margin-right: 0;
+    }
   }
 }
 
@@ -754,6 +757,38 @@ app-service-page-checkout{
       width: 345px;
       margin: 70px 0 30px;
       margin-left: auto;
+    }
+  }
+}
+@media (max-width: 1024px) {
+  .wrapper {
+    max-width: 690px;
+    margin: 0 auto;
+  }
+  .choose-packet{
+    display: none;
+  }
+  .bread-crumbs{
+    margin-top: 75px;
+  }
+  .description{
+    width: 100%;
+    max-width: none;
+    margin-top: 30px;
+    .container{
+      justify-content: space-between;
+    }
+    .actions{
+      margin-right: 30px;
+    }
+  }
+  .about-offer{
+    &__text{
+      font-size: 16px;
+      line-height: 20px;
+    }
+    &::after {
+      display: none;
     }
   }
 }
