--- a/src/app/service-page/components/service-page-questions/service-page-questions.component.scss
+++ b/src/app/service-page/components/service-page-questions/service-page-questions.component.scss
@@ -136,6 +136,12 @@
       font-size: 16px;
       line-height: 18px;
     }
-
+  }
+}
+@media (max-width: 1024px) {
+  .question-item {
+    &__title {
+      font-size: 18px;
+    }
   }
 }
