--- a/src/app/service-page/components/ngx-gallery/ngx-gallery.component.scss
+++ b/src/app/service-page/components/ngx-gallery/ngx-gallery.component.scss
@@ -15,6 +15,8 @@
       background-color: #fff;
       z-index: 9;
       &.ngx-gallery-arrow-left{
+        left: -1px;
+        border: 1px solid #F2F5FB;
         .ngx-gallery-icon::after{
           transform: translate(-30%, -50%) rotate(135deg);
         }
@@ -23,6 +25,8 @@
         }
       }
       &.ngx-gallery-arrow-right{
+        right: -1px;
+        border: 1px solid #F2F5FB;
         .ngx-gallery-icon::after{
           transform: translate(-70%, -50%) rotate(-45deg);
         }
@@ -225,4 +229,9 @@
       }
     }
   }
+}
+
+@media (max-width: 1024px) {
+
+
 }
