--- a/src/app/service-page/components/service-page-about-offer/service-page-about-offer.component.scss
+++ b/src/app/service-page/components/service-page-about-offer/service-page-about-offer.component.scss
@@ -208,6 +208,7 @@
       font-weight: 600;
       margin: 0;
       margin-bottom: 10px;
+      text-transform: capitalize;
     }
     .text{
       font-weight: normal;
