--- a/src/app/service-page/components/service-page-similar-offers/service-page-similar-offers.component.html
+++ b/src/app/service-page/components/service-page-similar-offers/service-page-similar-offers.component.html
@@ -4,7 +4,7 @@
   </h4>
   <div class="cards-list">
 
-      <div class="card" *ngFor="let offer of similarOffers.similarOffers">
+      <div class="card" *ngFor="let offer of similarOffers">
         <div class="card-preview__bg">
           <img class="card-preview" [src]="offer.mainImage" (click)="openOffer(offer.id)">
         </div>
