--- a/src/app/shared/modules/footer/footer.component.scss
+++ b/src/app/shared/modules/footer/footer.component.scss
@@ -130,11 +130,181 @@
       max-width: 1110px;
       margin: 0 auto;
     }
+    .footer{
+      height: 400px;
+      &::after{
+        width: 35%;
+        height: 100%;
+        top: 10%;
+        left: -6%;
+      }
+      &::before{
+        width: 65%;
+        height: 85%;
+        bottom: -20%;
+        right: -5%;
+      }
+      .column{
+        width: 16%;
+        margin-bottom: 20px;
+        &-title{
+          font-size: 16px;
+          line-height: 20px;
+          margin: 0 0 15px;
+        }
+        &-item{
+          font-size: 14px;
+          line-height: 18px;
+        }
+      }
+      .copyright{
+        font-size: 13px;
+        line-height: 16px;
+      }
+      .arrows{
+        width: 100%;
+        height: 400px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        .arrow{
+          position: absolute;
+          width: 100%;
+          top: 20%;
+        }
+      }
+    }
   }
 
   @media (max-width: 1360px) {
     .footer .wrapper {
       max-width: 1010px;
       margin: 0 auto;
+    }
+  }
+
+  @media (max-width: 1199.98px) {
+    .footer{
+      height: 330px;
+      &::after{
+        width: 35%;
+        height: 100%;
+        top: 10%;
+        left: -6%;
+      }
+      &::before{
+        width: 65%;
+        height: 85%;
+        bottom: -20%;
+        right: -5%;
+      }
+      .column{
+        width: auto;
+        margin-bottom: 20px;
+        &-title{
+          font-size: 16px;
+          line-height: 20px;
+          margin: 0 0 15px;
+        }
+        &-item{
+          font-size: 13px;
+          line-height: 16px;
+        }
+        .column{
+          &:nth-child(1){
+            margin-right: auto;
+            width: 20%;
+          }
+          &:nth-child(2){
+            width: 28%;
+          }
+          &:nth-child(3){
+            width: 29%;
+          }
+          &:nth-child(4){
+            width: 14%;
+          }
+        }
+      }
+      .copyright{
+        font-size: 13px;
+        line-height: 16px;
+      }
+      .arrows{
+        width: 100%;
+        height: 400px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        .arrow{
+          position: absolute;
+          width: 100%;
+          top: 20%;
+        }
+      }
+    }
+  }
+  @media (max-width: 1024px) {
+    .footer .wrapper {
+      max-width: 690px;
+      margin: 0 auto;
+    }
+  }
+  @media (max-width: 767.98px) {
+    .footer .wrapper {
+      max-width: 420px;
+      margin: 0 auto;
+    }
+    .footer{
+      height: auto;
+      &::after{
+        display: none;
+      }
+      &::before{
+        display: none;
+      }
+      .wrapper{
+        padding: 0 35px;
+  
+      }
+      .columns-list{
+        flex-direction: column;
+        padding-top: 90px;
+      }
+      .column{
+        width: 100%;
+        margin-bottom: 10px;
+        &-title{
+          font-size: 16px;
+          line-height: 20px;
+          margin: 0 0 15px;
+        }
+        &-item{
+          font-size: 14px;
+          line-height: 18px;
+        }
+  
+        &.column-info{
+          width: 100%;
+          order: 4;
+          justify-content: center;
+          align-items: center;
+          h4, p{
+            text-align: center;
+            margin-top: 0;
+  
+          }
+        }
+  
+      }
+      .copyright{
+        font-size: 13px;
+        line-height: 16px;
+      }
+      .arrows{
+        display: none;
+      }
     }
   }
