--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/second-step-creation/second-step-creation.component.html
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/second-step-creation/second-step-creation.component.html
@@ -9,10 +9,10 @@
             <quill-editor [modules]="config" [(ngModel)]="userService.description" name="editor" placeholder="" (onContentChanged)="onEditorCreated($event)" ngbPopover="{{'dashboard.create-service.second-step.tool-tip.subtitle' | translate}}" popoverTitle="{{'dashboard.create-service.second-step.tool-tip.title' | translate}}"
                 placement="right" popoverClass="popover" closeDelay="200">
             </quill-editor>
-            <span class="notify" *ngIf="submitted && characterLength <= 100 || characterLength === null">
-              {{'dashboard.create-service.second-step.minimal-error' | translate}}
+            <span class="notify" *ngIf="characterLength <= 100 || characterLength === null">
+                {{this.characterLength}}{{'dashboard.create-service.second-step.minimal-error' | translate}}
             </span>
-            <span class="notify" *ngIf="submitted && characterLength > 100 && characterLength !== null">
+            <span class="notify" *ngIf="characterLength > 100 && characterLength !== null">
               {{this.characterLength}}&nbsp;{{'dashboard.create-service.second-step.max-error' | translate}}
             </span>
         </div>
