--- a/src/app/shared/modules/main-header/main-header.component.html
+++ b/src/app/shared/modules/main-header/main-header.component.html
@@ -33,7 +33,7 @@
         </div>
         <div class="logo">
             <!-- <a [routerLink]="'' | localize"> <img src="assets/images/logo.svg" alt=""></a> -->
-            <a [routerLink]="'/' | localize"> Whocan</a>
+            <a [routerLink]="'' | localize"> Whocan</a>
         </div>
         <div class="menu">
 
