--- a/src/app/dashboard-page/dashboard-page.component.html
+++ b/src/app/dashboard-page/dashboard-page.component.html
@@ -37,11 +37,11 @@
         <section class="menu">
             <nav>
                 <ng-container *ngFor="let el of dashboardMenu">
-                    <a class="{{el.class}}" *ngIf="user.role_id === 1 && el.class !== 'catalog' && el.class !== 'arbitr' ||
-            user.role_id === 2 &&
-            el.class !== 'services' && el.class !== 'arbitr' ||
-            (user.role_id === 42 && el.class !== 'services' && el.class !== 'settings' && el.class !== 'projects')
-            " [routerLink]="el.link | localize" [routerLinkActive]="'active'" (click)="openChat(el.class)" [ngClass]="{ 'new-message': newMessage, 'new-work-message': newWorkMessage }"><span>{{ el.title | translate }}</span></a>
+                    <a class="{{el.class}}" *ngIf="
+                    user.role_id === 1 && el.class !== 'catalog' && el.class !== 'arbitr' ||
+                    user.role_id === 2 && el.class !== 'services' && el.class !== 'arbitr' ||
+                    (user.role_id === 42 && el.class !== 'services' && el.class !== 'settings' && el.class !== 'projects')
+            " [routerLink]="[el.link]| localize" [routerLinkActive]="'active'" (click)="openChat(el.class)" [ngClass]="{ 'new-message': newMessage, 'new-work-message': newWorkMessage }"><span>{{ el.title | translate }}</span></a>
                 </ng-container>
             </nav>
         </section>
