--- a/src/app/dashboard-page/dashboard-pages/finance-page/components/user-finances/user-finances.component.html
+++ b/src/app/dashboard-page/dashboard-pages/finance-page/components/user-finances/user-finances.component.html
@@ -59,7 +59,7 @@
                 <div class="title">{{'dashboard.payment-history.input-output' | translate}}</div>
                 <form class="form" #form=ngForm>
                     <div class="operation-type">
-                        <mat-select [(ngModel)]="transactions.transactionType" [(value)]="transactions.transactionType" required>
+                        <mat-select name="transactionType" [(ngModel)]="transactions.transactionType" [(value)]="transactions.transactionType" required>
                             <mat-option [value]="'deffault'" disabled>{{'dashboard.cash-box.choose-operation-type' | translate}}</mat-option>
                             <mat-option [value]="'input'">
                                 {{'dashboard.cash-box.input-money' | translate}}
@@ -100,7 +100,7 @@
             <div class="title">{{'dashboard.payment-history.input-output' | translate}}</div>
             <form class="form" #form="ngForm">
                 <div class="operation-type">
-                    <mat-select [(ngModel)]="transactions.transactionType" [(value)]="transactions.transactionType">
+                    <mat-select name="transactionType" [(ngModel)]="transactions.transactionType" [(value)]="transactions.transactionType">
                         <mat-option [value]="'deffault'" disabled>{{'dashboard.cash-box.choose-operation-type' | translate}}</mat-option>
                         <mat-option [value]="'input'">
                             {{'dashboard.cash-box.input-money' | translate}}
