bugfixing + language streem

--- a/src/app/authorization-page/reset-password-page/reset-password-page.component.html
+++ b/src/app/authorization-page/reset-password-page/reset-password-page.component.html
@@ -3,7 +3,7 @@
         <app-main-header [pageName]="'authoriz'"></app-main-header>
     </div>
 
-    <div class="wrapper">
+    <div class="wrapper" *ngIf="resetPass">
         <h2>{{'auth-page.reset-pass-title' | translate}}</h2>
 
         <form #form="ngForm" [formGroup]="resetPass" (ngSubmit)="ResetPass()">
