--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/third-step-creation/third-step-extra-options/third-step-extra-options.component.html
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/third-step-creation/third-step-extra-options/third-step-extra-options.component.html
@@ -4,14 +4,15 @@
 
     <!--------------------  Deadlines -------------------->
     <div class="time-option">
-        <div class="option-wrap" outsideTooltip="{{'dashboard.create-service.third-step.extra-form.tool-tip.price-title' | translate}}" outsideTooltipDescription="{{'dashboard.create-service.third-step.extra-form.tool-tip.price-subtitle' | translate}}" placement="right">
+        <div class="option-wrap" outsideTooltip="{{'dashboard.create-service.third-step.extra-form.tool-tip.price-title' | translate}}" 
+        outsideTooltipDescription="{{'dashboard.create-service.third-step.extra-form.tool-tip.price-subtitle' | translate}}" placement="right">
             <div class="checkbox">
                 <input type="checkbox" name="publishCompressedDeadlines" class="tgl-classic"
                        [(ngModel)]="userService.compressedDeadlines.publishCompressedDeadlines" id="time-to-do">
                 <label for="time-to-do"></label>
                 <span class="options-name">{{'dashboard.create-service.third-step.extra-form.terms' | translate}}</span>
             </div>
-            <div class="options" *ngIf="userService.allPackages !== true">
+            <div class="options" *ngIf="userService.allPackages === false || userService.allPackages === 0">
                 <span>{{'dashboard.create-service.third-step.extra-form.made-by' | translate}}</span>
                 <div [style.borderColor]="name.invalid ? '#f44336': '#dce0e6'">
                     <div class=" select-wrap-extra">
@@ -29,7 +30,7 @@
             <button type="button" class="show-pack-options" [ngClass]="optionsVisible ? 'up' : 'down'" (click)="showOptions()" *ngIf="userService.allPackages"></button>
         </div>
         <!-------------------- Exta Options if All Packages -------------------->
-        <div class="all-types" *ngIf="userService.allPackages" [ngClass]="optionsVisible ? 'open' : 'closed'" outsideTooltip="{{'dashboard.create-service.third-step.extra-form.tool-tip.term-title' | translate}}" outsideTooltipDescription="{{'dashboard.create-service.third-step.extra-form.tool-tip.term-subtitle' | translate}}"
+        <div class="all-types" *ngIf="userService.allPackages || userService.allPackages === 1" [ngClass]="optionsVisible ? 'open' : 'closed'" outsideTooltip="{{'dashboard.create-service.third-step.extra-form.tool-tip.term-title' | translate}}" outsideTooltipDescription="{{'dashboard.create-service.third-step.extra-form.tool-tip.term-subtitle' | translate}}"
             placement="right">
             <div>
                 <div>
